# VIRTOS-OOP

./: .gitignore  CMakeLists.txt
Source/: CMakeLists.txt  Main.cpp
Source/Constants/: Paths.hh
Source/Core/: System.cpp  System.h
Source/Core/FileSystem/: FileSystem.h
Source/Core/ProgramManager/: Process.h  Program.h  ProgramManager.cpp  ProgramManager.h
Source/Core/ProgramManager/Programs/ChangeDirProgram/: ChangeDirProgram.cpp  ChangeDirProgram.h
Source/Core/ProgramManager/Programs/ClockProgram/: ClockProgram.cpp  ClockProgram.h
Source/Core/ProgramManager/Programs/CopyProgram/: CopyProgram.cpp  CopyProgram.h
Source/Core/ProgramManager/Programs/ListFilesProgram/: ListFilesProgram.cpp  ListFilesProgram.h
Source/Core/ProgramManager/Programs/MakeDirProgram/: MakeDirProgram.cpp  MakeDirProgram.h
Source/Core/ProgramManager/Programs/MoveProgram/: MoveProgram.cpp  MoveProgram.h
Source/Core/ProgramManager/Programs/NanoProgram/: NanoProgram.cpp  NanoProgram.h
Source/Core/ProgramManager/Programs/NeofetchProgram/: NeofetchProgram.cpp  NeofetchProgram.h
Source/Core/ProgramManager/Programs/RemoveProgram/: RemoveProgram.cpp  RemoveProgram.h
Source/Core/ProgramManager/Programs/SnakeProgram/: SnakeProgram.cpp  SnakeProgram.h
Source/Core/Shell/: Shell.cpp  Shell.h
Source/Core/UserAccountControl/: UserAccountControl.cpp  UserAccountControl.h
Source/Utils/: Clock.hh  Console.hh  Enum.hh  Hash.h  IO.hh  Json.hh  Random.hh  Text.hh  Thread.hh  UUID.hh
