cmake_minimum_required(VERSION 3.2.0)

project(virtos)

set(CXXFLAGS  "")
set(CMAKE_CXX_FLAGS "${CXXFLAGS}")

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../build)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../build)

add_subdirectory(Source)